--- a/src/app/reset-password/reset-password.page.html
+++ b/src/app/reset-password/reset-password.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/login"></ion-back-button>
     </ion-buttons>
-    <ion-title>Reset Password</ion-title>
+    <ion-title>{{'reset.title' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,7 +11,7 @@
   <ion-card color="light" class="ion-padding">
     <form [formGroup]="resetPasswordForm">
       <ion-item color="light">
-        <ion-label position="stacked">Email</ion-label> <ion-input
+        <ion-label position="stacked">{{'reset.email' | translate}}</ion-label> <ion-input
         formControlName="email"
         type="email"
         placeholder="Your email address" [class.invalid]="!resetPasswordForm.controls['email'].valid && resetPasswordForm.controls['email'].touched"
@@ -20,12 +20,12 @@
         <ion-item color="light"
         class="error-message" *ngIf="!resetPasswordForm.controls['email'].valid && resetPasswordForm.controls['email'].touched"
         >
-        <ion-label>Please enter a valid email.</ion-label>
+        <ion-label>{{'reset.please' | translate}}.</ion-label>
       </ion-item>
       <ion-button
       expand="block" (click)="resetPassword(resetPasswordForm)" [disabled]="!resetPasswordForm.valid"
       >
-      Reset your Password
+      {{'reset.reset' | translate}}
       </ion-button> 
     </form>
   </ion-card>
