--- a/src/app/transact/transact.page.html
+++ b/src/app/transact/transact.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-button class="top-btn" (click)="backWarning()"><ion-icon name="arrow-back"></ion-icon></ion-button>
     </ion-buttons>
-    <ion-title>Complete Payment</ion-title>
+    <ion-title>{{'transact.title' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,12 +12,12 @@
     <ion-row>
       <ion-col>
         <p>{{ this.business }}</p>
-        <p *ngIf="this.optionalTax">Subtotal: {{ this.subtotal2 | number : '1.2-2'}}</p>
-        <p *ngIf="this.optionalTax">Tax: {{ this.finalTax | number : '1.2-2'}}</p>
-        <p *ngIf="this.fiat === 'USD'">Total: ${{ this.total | number : '1.2-2'}}</p>
-        <p *ngIf="this.fiat != 'USD'">{{this.fiat}} Total: {{ this.total | number : '1.2-2'}}</p>
-        <p *ngIf="this.fiat === 'USD'">{{ this.symbol }} Market Rate: ${{ this.price | number: '1.2-4' }}</p>
-        <p *ngIf="this.fiat != 'USD'">{{ this.symbol }} Market Rate: {{this.fiat}}{{ this.price | number: '1.2-4' }}</p>
+        <p class="sub" *ngIf="this.fiat === 'USD'">{{ this.symbol }} {{'transact.market' | translate}}: ${{ this.price | number: '1.2-4' }}</p>
+        <p class="sub" *ngIf="this.fiat != 'USD'">{{ this.symbol }} {{'transact.market' | translate}}: {{this.fiat}}{{ this.price | number: '1.2-4' }}</p>
+        <p class="sub" *ngIf="this.optionalTax">{{'transact.subtotal' | translate}}: {{ this.subtotal2 | number : '1.2-2'}}</p>
+        <p class="sub" *ngIf="this.optionalTax">{{'transact.tax' | translate}}: {{ this.finalTax | number : '1.2-2'}}</p>
+        <p *ngIf="this.fiat === 'USD'">{{'transact.total' | translate}}: ${{ this.total | number : '1.2-2'}}</p>
+        <p *ngIf="this.fiat != 'USD'">{{this.fiat}} {{'transact.total' | translate}}: {{ this.total | number : '1.2-2'}}</p>
       </ion-col>
       <ion-col *ngIf="this.businessEmail != null">
         <img class="business-logo" src="{{this.logo}}"/>
@@ -26,12 +26,12 @@
   <div class="line"></div>
   </ion-grid>
   <div class="due-div">
-    <p class="center">- {{this.coin}} Due -</p>
+    <p class="center">- {{this.coin}} {{'transact.due' | translate}} -</p>
     <div class="dgb-due">
       <ion-item *ngIf="this.coin === 'bitcoin'" lines="none">
         <ion-label text-center>
           <ion-avatar slot="start">
-            <img src="../../assets/Bitcoin.jpg">
+            <img src="../../assets/btc@2x.png">
           </ion-avatar>
           <h1 class="dgb-total"><ion-spinner *ngIf="searching" name="dots"></ion-spinner>{{ this?.amount | number : '1.2-8' }}</h1>
         </ion-label>
@@ -39,7 +39,7 @@
       <ion-item *ngIf="this.coin === 'litecoin'" lines="none">
         <ion-label text-center>
           <ion-avatar slot="start">
-            <img src="../../assets/ltc.png">
+            <img src="../../assets/ltc@2x.png">
           </ion-avatar>
           <h1 class="dgb-total"><ion-spinner *ngIf="searching" name="dots"></ion-spinner>{{ this?.amount | number : '1.2-8' }}</h1>
         </ion-label>
@@ -47,7 +47,7 @@
       <ion-item *ngIf="this.coin === 'digibyte'" lines="none"> 
         <ion-label text-center>
           <ion-avatar slot="start">
-            <img src="../../assets/DigiByte.jpg">
+            <img src="../../assets/dgb@2x.png">
           </ion-avatar>
           <h1 class="dgb-total"><ion-spinner *ngIf="searching" name="dots"></ion-spinner>{{ this?.amount | number : '1.2-4' }}</h1>
         </ion-label>
@@ -57,9 +57,9 @@
       <div *ngIf="this?.amount" class="qr-code">
         <qrcode [qrdata]="this?.uri" [size]="256" [level]="'M'" [usesvg]="true" [colordark]="'#182650'"></qrcode>
       </div>
-      <p class="inner-card">Click "Send" in your {{this.coin}} wallet. Scan the QR code.</p>
+      <p class="inner-card">{{'transact.click' | translate}} {{this.coin}} {{'transact.wallet' | translate}}.</p>
       <ion-spinner class="spinnerCenter" *ngIf="this.searching2" name="crescent"></ion-spinner>
-      <p *ngIf="this.searching2" class="inner-card">Checking for Payment...<ion-spinner name="dots"></ion-spinner></p>
+      <p *ngIf="this.searching2" class="inner-card">{{'transact.checking' | translate}}...<ion-spinner name="dots"></ion-spinner></p>
     </ion-card>
     <hr>
     <!-- <ion-card *ngIf="this.searching2" class="card2" color="primary">
@@ -70,7 +70,7 @@
   </div>
   <div *ngIf="this.timeOut === true" class="check" padding>
     <ion-button  (click)="checkBlockchain(this.address, this.coin)" shape="round" color="primary" expand="block" [disabled]="!this.uri" (click)="checkConfirms()">
-      Check The Blockchain
+      {{'transact.bchain' | translate}}
     </ion-button>
   </div>
 </ion-content>
