--- a/src/app/add-items/add-items.component.html
+++ b/src/app/add-items/add-items.component.html
@@ -1,19 +1,19 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>Add New Item</ion-title>
+    <ion-title>{{'items.title' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content scrollX="true">
+<ion-content>
   <ion-grid>
     <ion-row>
       <ion-col>
         <ion-item>
-          <ion-label position="floating">Enter Price 0.00</ion-label>
+          <ion-label position="floating">{{'items.price' | translate}} 0.00</ion-label>
           <ion-input type="number" [(ngModel)]="price"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Description (optional)</ion-label>
+          <ion-label position="floating">{{'items.desc' | translate}}</ion-label>
           <ion-input type="text" [(ngModel)]="description"></ion-input>
         </ion-item>
         <ion-grid>
@@ -21,14 +21,14 @@
             <ion-col col-12 col-sm>
               <div>
                 <ion-button shape="round" expand="full" fill="outline" (click)="saveItem()" [disabled]="!price || price <= 0">
-                  Add Item <ion-icon slot="end" name="add-circle"></ion-icon>
+                  {{'items.add' | translate}} <ion-icon slot="end" name="add-circle"></ion-icon>
                 </ion-button>
               </div>  
             </ion-col>
             <ion-col col-12 col-sm>
               <div>  
                 <ion-button expand="full" fill="outline" shape="round" color="danger" (click)="close()">
-                  Cancel
+                  {{'items.cancel' | translate}}
                 </ion-button>
               </div> 
             </ion-col>
@@ -39,7 +39,7 @@
             <ion-col col-12 col-sm>
               <div>  
                 <ion-button expand="full" shape="round" class="addbtn" [disabled]="!price || price <= 0" (click)="storeUserDefined()">
-                  Save Item<ion-icon slot="end" name="cloud-done"></ion-icon>
+                  {{'items.save' | translate}}<ion-icon slot="end" name="cloud-done"></ion-icon>
                 </ion-button>
                 <ion-searchbar class="bar" placeholder="Search Defined Items" [(ngModel)]="searchTerm" (ionChange)="setFilteredItems()"></ion-searchbar>
               </div>
