--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,15 +8,23 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <img class="splash-logo" src='assets/DigiCafeV2.svg'>
-  <h3>Sign In</h3>
+  <img class="splash-logo" src='assets/digicafe-logo.svg'>
+  <ion-segment (ionChange)="segmentChanged($event)">
+    <ion-segment-button value="en">
+      <ion-label>English</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="es">
+      <ion-label>Español</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+  <h3>{{'login.title' | translate}}</h3>
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm>
         <ion-card class="card" color="light" class="ion-padding">
           <form [formGroup]="loginForm">
             <ion-item color="light">
-              <ion-label position="stacked">Email</ion-label>
+              <ion-label position="stacked">{{'login.email' | translate}}</ion-label>
               <ion-input
                 formControlName="email"
                 type="email"
@@ -31,11 +39,11 @@
               *ngIf="!loginForm.controls['email'].valid &&
                   loginForm.controls['email'].touched"
             >
-              <ion-label>Please enter a valid email address.</ion-label>
+              <ion-label>{{'login.please' | translate}}.</ion-label>
             </ion-item>
           
             <ion-item color="light">
-              <ion-label position="stacked">Password</ion-label>
+              <ion-label position="stacked">{{'login.password' | translate}}</ion-label>
               <ion-input
                 formControlName="password"
                 type="password"
@@ -49,34 +57,23 @@
               *ngIf="!loginForm.controls['password'].valid
                 && loginForm.controls['password'].touched"
             >
-              <ion-label>Your password needs more than 6 characters.</ion-label>
+              <ion-label>{{'login.passwarn' | translate}}.</ion-label>
             </ion-item>
             
-            <ion-button class="btn" (click)="loginUser(loginForm)" expand="block" [disabled]="!loginForm.valid">
-              Log In
+            <ion-button shape="round" class="btn" (click)="loginUser(loginForm)" expand="block" [disabled]="!loginForm.valid">
+              {{'login.login' | translate}}
             </ion-button>
           </form>
               
           <ion-button expand="block" fill="clear" routerLink="/signup">
-            Create a new account
+            {{'login.create' | translate}}
           </ion-button>
           
           <ion-button expand="block" fill="clear" routerLink="/reset-password">
-            I forgot my password 🙁
+            {{'login.forgot' | translate}} 🙁
           </ion-button>
         </ion-card>
       </ion-col>
-      <!-- <ion-col size="12" size-sm>
-        <p>Digi-ID is built into your DigiByte mobile wallet app.</p>
-        <ion-card class="card" padding>
-          <div class="qr">
-            <qrcode [qrdata]="jwt" [size]="256" [level]="'M'" [usesvg]="true" [colordark]="'#182650'"></qrcode>
-          </div>
-          <div class="logo">
-            <img src="../../assets/logo.svg">
-          </div>
-        </ion-card>
-      </ion-col> -->
     </ion-row>
   </ion-grid>
 </ion-content>
