--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -4,9 +4,9 @@
       <ion-back-button defaultHref="/tabs/tab2"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end" *ngIf="this.loggedin">
-      <ion-button (click)="logOut()">Sign Out</ion-button>
+      <ion-button (click)="logOut()">{{'settings.logout' | translate}}</ion-button>
     </ion-buttons>
-    <ion-title>Settings</ion-title> 
+    <ion-title>{{'settings.title' | translate}}</ion-title> 
   </ion-toolbar>
 </ion-header>
 
@@ -14,109 +14,99 @@
   <ion-list>
     <ion-item (click)="saveBusiness()"> 
       <ion-label>
-        <p>Business Name</p>
+        <p>{{'settings.bname' | translate}}</p>
         <ion-text>{{ this.business }}</ion-text>
-        <ion-text *ngIf="this.business === null || this.business === ''">Tap to enter business name.</ion-text>
+        <ion-text *ngIf="this.business === null || this.business === ''">{{'settings.tap' | translate}} {{'settings.bname' | translate}}.</ion-text>
      </ion-label>
     </ion-item>
     <ion-item (click)="saveEmail()"> 
       <ion-label>
-        <p>Business Email</p>
+        <p>{{'settings.bemail' | translate}}</p>
         <ion-text>{{ this.businessEmail }}</ion-text>
-        <ion-text *ngIf="this.businessEmail === null || this.businessEmail === ''">Tap to enter business email.</ion-text>
+        <ion-text *ngIf="this.businessEmail === null || this.businessEmail === ''">{{'settings.tap' | translate}} {{'settings.bemail' | translate}}.</ion-text>
       </ion-label>
     </ion-item>
     <ion-item (click)="saveDigiByte()" *ngIf="!this.autoSell"> 
       <ion-avatar slot="start">
-        <img src="../../assets/DigiByte.jpg">
+        <img src="../../assets/dgb@2x.png">
       </ion-avatar>
       <ion-label>
-        <p>DigiByte Address</p>
+        <p>DigiByte {{'settings.address' | translate}}</p>
         <ion-text>{{ this.externalAddress }}</ion-text>
-        <ion-text *ngIf="this.externalAddress === null || this.externalAddress === ''">Tap to enter DigiByte address.</ion-text>
+        <ion-text *ngIf="this.externalAddress === null || this.externalAddress === ''">{{'settings.tap' | translate}} DigiByte {{'settings.address' | translate}}.</ion-text>
       </ion-label>
     </ion-item>
     <ion-item (click)="saveLitecoin()" *ngIf="!this.autoSell"> 
       <ion-avatar slot="start">
-        <img src="../../assets/ltc.png">
+        <img src="../../assets/ltc@2x.png">
       </ion-avatar>
       <ion-label>
-        <p>Litecoin Address</p>
+        <p>Litecoin {{'settings.address' | translate}}</p>
         <ion-text>{{ this.ltcAddress }}</ion-text>
-        <ion-text *ngIf="this.ltcAddress === null || this.ltcAddress === ''">Tap to enter Litecoin address.</ion-text>
+        <ion-text *ngIf="this.ltcAddress === null || this.ltcAddress === ''">{{'settings.tap' | translate}} Litecoin {{'settings.address' | translate}}.</ion-text>
       </ion-label>
     </ion-item>
     <ion-item (click)="saveBitcoin()" *ngIf="!this.autoSell"> 
       <ion-avatar slot="start">
-        <img src="../../assets/Bitcoin.jpg">
+        <img src="../../assets/btc@2x.png">
       </ion-avatar>
       <ion-label>
-        <p>Bitcoin Address</p>
+        <p>Bitcoin {{'settings.address' | translate}}</p>
         <ion-text>{{ this.btcAddress }}</ion-text>
-        <ion-text *ngIf="this.btcAddress === null || this.btcAddress === ''">Tap to enter Bitcoin address.</ion-text>
+        <ion-text *ngIf="this.btcAddress === null || this.btcAddress === ''">{{'settings.tap' | translate}} Bitcoin {{'settings.address' | translate}}.</ion-text>
       </ion-label>
     </ion-item>
-    <!-- <ion-item> 
-      <ion-label>
-        <p>Internal Transaction Wallet</p>
-        <ion-text (click)="copyAddress()" *ngIf="this.dgbAddress">DigiByte Transactions</ion-text>
-        <ion-text *ngIf="this.dgbAddress === null || this.dgbAddress === ''">Click "Create" to generate address.</ion-text>
-      </ion-label>
-      <ion-button *ngIf="!dgbAddress" slot="end" color="primary" size="small" (click)="setDGB()">Create</ion-button>
-      <ion-button *ngIf="dgbAddress" slot="end" color="primary" size="small" (click)="toWallet()"><ion-icon name="wallet"></ion-icon></ion-button>
-    </ion-item> -->
     <ion-item *ngIf="this.bittrexKey">
-      <ion-label>Auto Sell With Bittrex</ion-label>
+      <ion-label>{{'settings.auto' | translate}} Bittrex</ion-label>
       <ion-toggle slot="end" color="primary" (ionChange)="autoSellActive()" [(ngModel)]="autoSell" checked="true"></ion-toggle>
     </ion-item>
     <ion-item (click)="saveBittrexKey()"> 
       <ion-label>
-        <p>Bittrex API Key</p>
+        <p>Bittrex API {{'settings.key' | translate}}</p>
         <ion-text class="password">{{ this.bittrexKey }}</ion-text>
-        <ion-text *ngIf="this.bittrexKey === null || this.bittrexKey === ''">Tap to enter Bittrex API Key.</ion-text>
+        <ion-text *ngIf="this.bittrexKey === null || this.bittrexKey === ''">{{'settings.tap' | translate}} Bittrex API {{'settings.key' | translate}}.</ion-text>
       </ion-label>
     </ion-item>
     <ion-item *ngIf="this.autoSell && this.bittrexKey"> 
       <ion-avatar slot="start">
-        <img src="../../assets/DigiByte.jpg">
+        <img src="../../assets/dgb@2x.png">
       </ion-avatar>
       <ion-label>
-        <p>DigiByte Bittrex Address</p>
+        <p>DigiByte Bittrex {{'settings.address' | translate}}</p>
         <ion-text>{{ this.dgbBittrexAddress }}</ion-text>
-        <ion-button size ="small" fill="outline" (click)="saveDigiByteBittrex()" *ngIf="!this.dgbBittrexAddress">Fetch Address</ion-button>
+        <ion-button size ="small" fill="outline" (click)="saveDigiByteBittrex()" *ngIf="!this.dgbBittrexAddress">Fetch {{'settings.address' | translate}}</ion-button>
       </ion-label>
     </ion-item>
     <ion-item *ngIf="this.autoSell && this.bittrexKey"> 
       <ion-avatar slot="start">
-        <img src="../../assets/ltc.png">
+        <img src="../../assets/ltc@2x.png">
       </ion-avatar>
       <ion-label>
-        <p>Litecoin Bittrex Address</p>
+        <p>Litecoin Bittrex {{'settings.address' | translate}}</p>
         <ion-text>{{ this.ltcBittrexAddress }}</ion-text>
-        <ion-button size ="small" fill="outline" (click)="saveLitecoinBittrex()" *ngIf="!this.ltcBittrexAddress">Fetch Address</ion-button>
+        <ion-button size ="small" fill="outline" (click)="saveLitecoinBittrex()" *ngIf="!this.ltcBittrexAddress">Fetch {{'settings.address' | translate}}</ion-button>
       </ion-label>
     </ion-item>
     <ion-item *ngIf="this.autoSell && this.bittrexKey"> 
       <ion-avatar slot="start">
-        <img src="../../assets/Bitcoin.jpg">
+        <img src="../../assets/btc@2x.png">
       </ion-avatar>
       <ion-label>
-        <p>Bitcoin Bittrex Address</p>
+        <p>Bitcoin Bittrex {{'settings.address' | translate}}</p>
         <ion-text>{{ this.btcBittrexAddress }}</ion-text>
-        <ion-button size ="small" fill="outline" (click)="saveBitcoinBittrex()" *ngIf="!this.btcBittrexAddress">Fetch Address</ion-button>
+        <ion-button size ="small" fill="outline" (click)="saveBitcoinBittrex()" *ngIf="!this.btcBittrexAddress">Fetch {{'settings.address' | translate}}</ion-button>
       </ion-label>
     </ion-item>
-    <ion-item *ngIf="this.stripeId">
-      <ion-avatar>
-        <img src="../../assets/stripe.png">
-      </ion-avatar>
+    <!-- <ion-item (click)="connectUphold()">
+      <div slot="end" class="uphold">
+        <img src="../../assets/uphold.png">
+      </div>
       <ion-label>
-          <ion-text class="address">Stripe Connected</ion-text>
+          <ion-text class="address">Uphold</ion-text>
       </ion-label>
-      <!-- <ion-button class="stp-btn" size="small" fill="outline" color="primary" (click)="disconnectStripe()">Disconnect</ion-button> -->
-    </ion-item>
+    </ion-item> -->
     <ion-item class="trns">
-      <ion-label color="dark">Currency Selection</ion-label>
+      <ion-label color="dark">{{'settings.currency' | translate}}</ion-label>
       <ion-select multiple="false" [(ngModel)]="this.currency" (ionChange)="saveCurrency()">
         <ion-select-option>USD</ion-select-option> 
         <ion-select-option>AUD</ion-select-option>
@@ -151,20 +141,20 @@
       </ion-select>
     </ion-item>
     <ion-item>
-      <ion-label>Optional Tax Rate</ion-label>
+      <ion-label>{{'settings.optional-tax' | translate}}</ion-label>
       <ion-toggle color="primary" (ionChange)="editOptionalTax()" [(ngModel)]="optionalTax" checked="true"></ion-toggle>
     </ion-item>
     <ion-item class="trns" *ngIf="optionalTax === true">
-      <ion-label>Local Tax Rate</ion-label>
+      <ion-label>{{'settings.local-tax' | translate}}</ion-label>
       <ion-input class="input" debounce="1500" [(ngModel)]="taxRate" (ionChange)="editTaxRate()" placeholder="Enter Decimal: 10% = 0.10"></ion-input>
     </ion-item>
-    <!-- <ion-item (click)="saveReferral()"> 
-      <ion-label>
-        <p>Partner Code</p>
-        <ion-text class="password">{{ this.partnerAddress }}</ion-text>
-        <ion-text *ngIf="this.partnerAddress === null || this.partnerAddress === ''">Optional Partner Code</ion-text>
-      </ion-label>
-    </ion-item>-->
+    <ion-item class="trns">
+      <ion-label color="dark">{{'settings.language' | translate}}</ion-label>
+      <ion-select multiple="false" [(ngModel)]="this.language" (ionChange)="saveLanguage($event)">
+        <ion-select-option value="en">English</ion-select-option> 
+        <ion-select-option value="es">Español</ion-select-option>
+      </ion-select>
+    </ion-item>
   </ion-list>
 </ion-content>
 <ion-footer>
@@ -173,11 +163,10 @@
       <ion-grid>
         <ion-row>
           <ion-col>
-            <ion-button id="transact" shape="round" expand="block" [disabled]="!this.externalAddress && !this.businessEmail" (click)="toListMasterPage()">Transact</ion-button>
+            <ion-button id="transact" shape="round" expand="block" [disabled]="!this.externalAddress && !this.businessEmail" (click)="toListMasterPage()">{{'settings.transact' | translate}}</ion-button>
           </ion-col>
           <ion-col>
-            <ion-button expand="block" shape="round" fill="outline" (click)="goToHelp()" color="medium">Help</ion-button>
-            <!-- <ion-button expand="block" shape="round" fill="outline" (click)="getOFX()" color="medium">OFX</ion-button> -->
+            <ion-button expand="block" shape="round" fill="outline" (click)="goToHelp()" color="medium">{{'settings.help' | translate}}</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
