--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,22 +2,22 @@
   <ion-tab-bar slot="bottom" color="primary">
     <ion-tab-button tab="tab1">
       <ion-icon name="home"></ion-icon>
-      <ion-label>Welcome</ion-label>
+      <ion-label>{{'tabs.welcome' | translate}}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="repeat"></ion-icon>
-      <ion-label>Transact</ion-label>
+      <ion-label>{{'tabs.transact' | translate}}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="flash"></ion-icon>
-      <ion-label>Settings</ion-label>
+      <ion-label>{{'tabs.settings' | translate}}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
       <ion-icon name="file-tray-full"></ion-icon>
-      <ion-label>Records</ion-label>
+      <ion-label>{{'tabs.records' | translate}}</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
