--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,14 +9,24 @@
 
 <ion-content class="ion-padding">
   <img class="splash-logo" src='assets/digicafe-logo.svg'>
-  <ion-segment (ionChange)="segmentChanged($event)">
-    <ion-segment-button value="en">
-      <ion-label>English</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="es">
-      <ion-label>Español</ion-label>
-    </ion-segment-button>
-  </ion-segment>
+  <div class="segment ion-padding">
+    <!-- <ion-segment color="primary" (ionChange)="segmentChanged($event)">
+      <ion-segment-button value="en">
+        <ion-label>English</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="es">
+        <ion-label>Español</ion-label>
+      </ion-segment-button>
+    </ion-segment> -->
+    <!-- <p>English</p><ion-toggle [(ngModel)]="this.language" value="true" (ionChange)="segmentChanged($event)"></ion-toggle><p>Español</p> -->
+    <ion-item class="trns">
+      <ion-label color="light">{{'settings.language' | translate}}</ion-label>
+      <ion-select multiple="false" [(ngModel)]="this.language" (ionChange)="saveLanguage($event)">
+        <ion-select-option value="en">English</ion-select-option> 
+        <ion-select-option value="es">Español</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </div>
   <h3>{{'login.title' | translate}}</h3>
   <ion-grid>
     <ion-row>
