--- a/src/app/reset-password/reset-password.page.html
+++ b/src/app/reset-password/reset-password.page.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+  <img class="splash-logo" src='assets/digicafe-logo.svg'>
   <ion-card color="light" class="ion-padding">
     <form [formGroup]="resetPasswordForm">
       <ion-item color="light">
@@ -23,7 +24,7 @@
         <ion-label>{{'reset.please' | translate}}.</ion-label>
       </ion-item>
       <ion-button
-      expand="block" (click)="resetPassword(resetPasswordForm)" [disabled]="!resetPasswordForm.valid"
+      expand="block" shape="round" (click)="resetPassword(resetPasswordForm)" [disabled]="!resetPasswordForm.valid"
       >
       {{'reset.reset' | translate}}
       </ion-button> 
