--- a/src/app/reset-password/reset-password.page.scss
+++ b/src/app/reset-password/reset-password.page.scss
@@ -26,6 +26,13 @@ ion-input {
 border-bottom: 1px solid #ff6153;
 }
 
+.splash-logo {
+  padding-top: 20px;
+  display: block;
+  margin: auto;
+  width: 300px;
+}
+
 .error-message { 
     min-height: 2.2rem; 
     ion-label {
@@ -36,4 +43,8 @@ border-bottom: 1px solid #ff6153;
     .item-inner {
     border-bottom: 0 !important;
     } 
+}
+
+ion-button{
+  margin-top: 20px;
 }
