--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="content">
     <div class="center">
-      <img class="splash-logo" src='assets/digicafe-logo.svg'>
+      <img class="splash-logo" src='../../assets/digicafe-logo.svg'>
       <div class="splash-intro">
         <p>{{'home.welcome' | translate}}</p>
       </div>
