--- a/src/app/account/account.page.html
+++ b/src/app/account/account.page.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar color="primary">
+  <ion-toolbar>
     <ion-title>Account</ion-title>
     <ion-buttons slot="start">
       <ion-back-button  defaultHref="/tabs/tab3"></ion-back-button>
